# -LI2PL2G2

./: README.md  Relatório.txt  Relatórios Semanais.txt  teste.md
guião5/: CMakeLists.txt  bot.c  bot.h  camada da interface.c  camada da interface.h  camada de dados.c  camada de dados.h  camada_da_interface.c  camada_da_interface.h  camada_de_dados.c  camada_de_dados.h  comando_jog.c  comando_jog.h  grupo.txt  listas.c  listas.h  listas_ligadas.c  listas_ligadas.h  logica do programa.c  logica do programa.h  logica_do_programa.c  logica_do_programa.h  main.c  prog  save1  save3
guião5/html/: annotated.html  camada_01da_01interface_8h_source.html  camada_01de_01dados_8h_source.html  camada__da__interface_8h.html  camada__da__interface_8h__dep__incl.md5  camada__da__interface_8h__incl.md5  camada__da__interface_8h_source.html  camada__de__dados_8h.html  camada__de__dados_8h__dep__incl.md5  camada__de__dados_8h__incl.md5  camada__de__dados_8h_source.html  files.html  globals.html  globals_enum.html  globals_func.html  logica_01do_01programa_8h_source.html  logica__do__programa_8h.html  logica__do__programa_8h__dep__incl.md5  logica__do__programa_8h__incl.md5  logica__do__programa_8h_source.html  main_8c.html  main_8c__incl.md5  menudata.js  structCOORDENADA.html  structESTADO.html  structESTADO__coll__graph.md5  structJOGADA.html
guião5/latex/: annotated.tex  camada__da__interface_8h.tex  camada__da__interface_8h__dep__incl.md5  camada__da__interface_8h__incl.md5  camada__de__dados_8h.tex  camada__de__dados_8h__dep__incl.md5  camada__de__dados_8h__incl.md5  files.tex  (+10 more)
(+80 files in other folders)
