cmake_minimum_required(VERSION 3.15)
project(guião5 C)

set(CMAKE_C_STANDARD 99)

add_executable(guião5 main.c "cmake-build-debug/camada de dados.h" "cmake-build-debug/CMakeFiles/camada de dados.c" "cmake-build-debug/logica do programa.h" "cmake-build-debug/logica do programa.c" "cmake-build-debug/camada da interface.h" "cmake-build-debug/camada da interface.c")